[package]
name = "plan10_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
nom = "7.1.0"
tokio = { version = "1.17.0", features = ["net", "io-util", "time"] }
tokio-stream = "0.1.8"
thiserror = "1.0.30"
async-stream = "0.3.2"
smallvec = "1.8.0"
snow = "0.9.0"
parking_lot = "0.12.0"
